--- a/MauiWeb/Views/Shared/_Layout.cshtml
+++ b/MauiWeb/Views/Shared/_Layout.cshtml
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MauiBookWeb</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="~/MauiBookWeb.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/_Layout.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"/>
+    
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
@@ -42,7 +43,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer bg-primary text-muted">
+    <footer class="footer bg-primary text-muted">
         <div class="container text-center">
             MauiBookWeb <i class="bi bi-heart-fill"></i>
         </div>
