--- a/MauiWeb/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/MauiWeb/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using MauiBookWeb.Areas.Identity
 @using MauiBookWeb.Areas.Identity.Pages
+@using MauiBook.Utility;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
