--- a/MauiWeb/Views/_ViewImports.cshtml
+++ b/MauiWeb/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿
 @using MauiBook.Models
 @using MauiBook.Models.ViewModels
+@using MauiBook.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
