--- a/MauiWeb/Views/Shared/_Layout.cshtml
+++ b/MauiWeb/Views/Shared/_Layout.cshtml
@@ -29,7 +29,8 @@
                         <li class="nav-item">
                             <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        
+                        @* @if(User.IsInRole(SD.Role_Admin)) *@
+                        {
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Content Managment
@@ -41,9 +42,13 @@
                                 <li class="nav-item">
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="index">Products</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="index">Companies</a>
+                                </li>
                                 <li><hr class="dropdown-divider"></li>
                             </ul>
                         </li>
+                       @*  } *@
                     </ul>
                     <partial name="_LoginPartial"/>
                     
