--- a/MauiWeb/Areas/Admin/Views/_ViewImports.cshtml
+++ b/MauiWeb/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿
 @using MauiBook.Models
+@using MauiBook.Utility;
 @using MauiBook.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
