--- a/MauiWeb/Views/Shared/_Layout.cshtml
+++ b/MauiWeb/Views/Shared/_Layout.cshtml
@@ -27,9 +27,9 @@
                             <a class="nav-link " asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link " asp-area="Admin" asp-controller="Order" asp-action="index" asp-route-status="all">Order Management</a>
                         </li>
-                        @* @if(User.IsInRole(SD.Role_Admin)) *@
+                         @if(User.IsInRole(SD.Role_Admin)) 
                         {
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -48,7 +48,12 @@
                                 <li><hr class="dropdown-divider"></li>
                             </ul>
                         </li>
-                       @*  } *@
+                         }
+                        <li class="nav-item">
+                            <a class="nav-link " asp-area="Customer" asp-controller="Cart" asp-action="index">
+                                <i class="bi bi-cart"></i> &nbsp;
+                            </a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial"/>
                     
