Add Session and View Component

--- a/MauiWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MauiWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -65,6 +65,9 @@
                         <label asp-for="Input.PostalCode" class="ms-2 text-muted">Postal code</label>
                         <span asp-validation-for="Input.PostalCode" class="text-danger"></span>
                     </div>
+                    @if(User.IsInRole(SD.Role_Admin))
+                    {
+                        
                     <div class="form-floating mb-3 col-md-6">
                         <select asp-for="@Model.Input.Role" asp-items="@Model.Input.RoleList" class="form-select">
                             <option selected disabled>--Select Role--</option>
@@ -75,6 +78,7 @@
                             <option selected disabled>--Select Company--</option>
                         </select>
                     </div>
+                    }
                     <div class="col-12">
                         <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
                     </div>
