in user managment, add Lock Unlock button and Permission button to change the role of user

--- a/MauiWeb/Views/Shared/_Layout.cshtml
+++ b/MauiWeb/Views/Shared/_Layout.cshtml
@@ -89,6 +89,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="//cdn.datatables.net/2.1.8/js/dataTables.min.js" asp-append-version="true"></script>
     <script src="https://cdn.tiny.cloud/1/bgipads1iflan897xmdlfu1myte7i8auc11lt7umicqoglya/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+   @*  <script src="~/lib/jquery/dist/jquery.min.js"></script> *@
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
