fix the reinitialization of order managment tab and named some pages

--- a/MauiWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/MauiWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -1,4 +1,8 @@
 ﻿@model OrderVM
+@{
+    ViewData["Title"] = "Order Details";
+    //Layout = "~/Views/Shared/_Layout.cshtml";
+}
 <div style="padding-bottom:100px;">
 <form method="post" >
     <input asp-for=@Model.Order.Id hidden />
