--- a/MauiWeb/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/MauiWeb/Areas/Customer/Views/Cart/Summary.cshtml
@@ -1,5 +1,8 @@
 ﻿@using MauiBook.Models.ViewModels
 @model ShoppingCartVM
+@{
+    ViewData["Title"] = "Order Summary";
+}
 <form method="post" style="height:700px">
 	<br />
 	<div class="container">
