--- a/MauiWeb/Areas/Admin/Views/Order/Index.cshtml
+++ b/MauiWeb/Areas/Admin/Views/Order/Index.cshtml
@@ -26,7 +26,9 @@
             break;
     }
 }
-
+@{
+    ViewData["Title"] = "Order List";
+}
 <div class="card shadow border-0 my-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
