--- a/MauiWeb/Areas/Customer/Views/Cart/Index.cshtml
+++ b/MauiWeb/Areas/Customer/Views/Cart/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@using MauiBook.Models.ViewModels
 @model ShoppingCartVM
+@{
+    ViewData["Title"] = "Carts";
+}
 <form method="post">
     <br />
     <div class="card shadow border-0">
