--- a/MauiWeb/Areas/Customer/Views/Home/Details.cshtml
+++ b/MauiWeb/Areas/Customer/Views/Home/Details.cshtml
@@ -1,4 +1,8 @@
 ﻿@model ShoppingCart
+@{
+    ViewData["Title"] = "Details";
+
+}
 <form method="post" class="mb-3">
     <input hidden asp-for="ProductId" />
     <div class="card shadow border-0 mt-4">
